--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: My First Training on Git Hub Pages
+author: Mike
+email: Mike.Bruse@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
+  This is Mike's website and first try and learning GIT. This is my 2nd line.
+  It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
 # social links
@@ -11,3 +11,4 @@ twitter_username: your-twitter-handle # DO NOT include the @ character, or else 
 github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+theme: minima
